feat(login-logout): RumahSehat

--- a/RumahSehat/src/main/resources/templates/login.html
+++ b/RumahSehat/src/main/resources/templates/login.html
@@ -18,9 +18,9 @@
                         Log In
                     </div>
 
-                    <div class="card-header">
+                    <!-- <div class="card-header">
                         <p th:text="'Port: ' + ${port}"></p>
-                    </div>
+                    </div> -->
 
                     <div class="card-body">
                         <div th:if="${param.error}">
