--- a/RumahSehat/src/main/resources/templates/form-add-dokter.html
+++ b/RumahSehat/src/main/resources/templates/form-add-dokter.html
@@ -6,6 +6,7 @@
     <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
+<nav th:replace="fragments/fragment :: navbar('Dokter')"></nav>
 <div class = "container">
     <div class="card m-4 p-4">
         <div class="card-body">
