--- a/RumahSehat/src/main/resources/templates/home.html
+++ b/RumahSehat/src/main/resources/templates/home.html
@@ -22,42 +22,26 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 </head>
 <body>
 
-  <div class=""d-flex justify-content-center>
+  <div class="d-flex justify-content-center">
     <div class="m-4">
       <div class="d-flex justify-content-center">
         <h2 th:text="'Hello ' + ${#httpServletRequest.remoteUser}+'!'">Login as</h2>
       </div>
 
       <div class="d-flex justify-content-center">
-        <h2>Selamat Datang di BelajarBelajar</h2>
-      </div>
-      
-
-      <br>
-      <div class="d-flex justify-content-center">
-        <a th:href="@{/}" class="mx-2 btn btn-primary">Lihat semua course</a>
-        <a th:href="@{/}" class="mx-2 btn btn-outline-primary">Tambah course</a>
-      </div>
-      <br>
-      <div class="d-flex justify-content-center">
-        <a th:href="@{/}" class="mx-2 btn btn-primary">Lihat semua penyelenggara</a>
-        <!-- <a th:href="@{/}" class="mx-2 btn btn-outline-primary" sec:authorize="hasAuthority('Manajer')">Tambah penyelenggara</a> -->
-      </div>
-      <br>
-      <div class="d-flex justify-content-center" sec:authorize="hasAuthority('Admin')">
-        <a th:href="@{/user/viewall}" class="mx-2 btn btn-primary">Lihat Semua User</a>
+        <h2>Selamat Datang di Rumah Sehat</h2>
       </div>
       <br>
 
       <div class="d-flex justify-content-center" sec:authorize="hasAuthority('Admin')">
         <a th:href="@{/user/viewall-dokter}" class="mx-2 btn btn-primary">Lihat Semua Dokter</a>
-      </div>
-      <br>
-
-      <div class="d-flex justify-content-center" sec:authorize="hasAuthority('Admin')">
         <a th:href="@{/user/viewall-apoteker}" class="mx-2 btn btn-primary">Lihat Semua Apoteker</a>
       </div>
       <br>
+
+      <!-- <div class="d-flex justify-content-center" sec:authorize="hasAuthority('Admin')">
+      </div>
+      <br> -->
       <!-- <div class="d-flex justify-content-center">
         <a th:href="@{/user/add}" class="mx-2 btn btn-outline-success">Tambah User Baru</a>
       </div> -->
