--- a/RumahSehat/src/main/resources/templates/viewall-apoteker.html
+++ b/RumahSehat/src/main/resources/templates/viewall-apoteker.html
@@ -8,7 +8,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
     <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
-<nav th:replace="fragments/fragment :: navbar('Pengguna')"></nav>
+<nav th:replace="fragments/fragment :: navbar('Apoteker')"></nav>
 <div class="container">
     <div class="card m-4 p-4">
         <div class="card-body">
