--- a/RumahSehat/src/main/resources/templates/viewall-dokter.html
+++ b/RumahSehat/src/main/resources/templates/viewall-dokter.html
@@ -3,12 +3,12 @@
 xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 <head>
-    <title>BelajarBelajar</title>
+    <title>Rumah Sehat</title>
     <object th:include="fragments/fragment :: css" th:remove="tag"></object>
     <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
-<nav th:replace="fragments/fragment :: navbar('Pengguna')"></nav>
+<nav th:replace="fragments/fragment :: navbar('Dokter')"></nav>
 <div class="container">
     <div class="card m-4 p-4">
         <div class="card-body">
