feat(fitur12): melihat daftar obat

--- a/RumahSehat/src/main/resources/templates/home.html
+++ b/RumahSehat/src/main/resources/templates/home.html
@@ -39,6 +39,12 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
       </div>
       <br>
 
+      <div class="d-flex justify-content-center">
+        <a th:href="@{/user/viewall-obat}" class="mx-2 btn btn-primary">Lihat Semua Obat</a>
+<!--        <a th:href="@{/user/viewall-apoteker}" class="mx-2 btn btn-primary">Update</a>-->
+      </div>
+      <br>
+
       <!-- <div class="d-flex justify-content-center" sec:authorize="hasAuthority('Admin')">
       </div>
       <br> -->
