--- a/RumahSehat/src/main/resources/templates/fragments/fragment.html
+++ b/RumahSehat/src/main/resources/templates/fragments/fragment.html
@@ -50,7 +50,7 @@
       </ul>
       <form class="form-inline my-2 my-lg-0" th:action="@{/course/view}" method="GET">
         <input class="form-control mr-sm-2" type="search"
-               name="code" placeholder="Code Course" aria-label="Search">
+               name="code" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
       </form>
       <ul class="navbar-nav pull-right">
