--- a/RumahSehat/src/main/resources/templates/home.html
+++ b/RumahSehat/src/main/resources/templates/home.html
@@ -44,12 +44,12 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <!--        <a th:href="@{/user/viewall-apoteker}" class="mx-2 btn btn-primary">Update</a>-->
       </div>
       <br>
-      <div class="d-flex justify-content-center" sec:authorize="hasAuthority('Admin')">
+      <!-- <div class="d-flex justify-content-center" sec:authorize="hasAuthority('Admin')">
         <a th:href="@{/user/viewall}" class="mx-2 btn btn-primary">Lihat Semua User</a>
       </div>
-      <br>
+      <br> -->
 
-      <div class="d-flex justify-content-center" sec:authorize="hasAuthority('Admin')">
+      <!-- <div class="d-flex justify-content-center" sec:authorize="hasAuthority('Admin')">
         <a th:href="@{/user/viewall-dokter}" class="mx-2 btn btn-primary">Lihat Semua Dokter</a>
       </div>
       <br>
