--- a/RumahSehat/src/main/resources/templates/viewall-appointment.html
+++ b/RumahSehat/src/main/resources/templates/viewall-appointment.html
@@ -36,11 +36,11 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
                         <td th:text=${iterationStatus.count}></td>
                         <td th:text="${appointment.dokter.nama}"></td>
                         <td th:text="${appointment.pasien.nama}"></td>
-                        <td th:text="${appointment.waktuAwal}"></td>
+                        <td th:text="${#temporals.format(appointment.waktuAwal, 'dd-MM-yyyy HH:mm')}"></td>
                         <td th:if="${appointment.isDone}">Sudah Selesai</td>
                         <td th:unless="${appointment.isDone}">Belum Selesai</td>
                         <td>
-                            <a class="btn btn-primary" th:href="@{/appointment/} + ${appointment.kode}">Detail</a>
+                            <a class="btn btn-primary" th:href="@{/user/appointment/} + ${appointment.kode}">Detail</a>
                         </td>
                     </tr>
                 </tbody>
