--- a/RumahSehat/src/main/resources/templates/fragments/fragment.html
+++ b/RumahSehat/src/main/resources/templates/fragments/fragment.html
@@ -36,7 +36,7 @@
           <a class="nav-link" href="/">Beranda</a>
         </li>
         <li th:classappend="${page == 'Dokter'} ? active : ''"class="nav-item" sec:authorize="hasAnyAuthority('Admin', 'Dokter')">
-          <a class="nav-link" href="/user/viewall-appointment">Appointment</a>
+          <a class="nav-link" href="/user/appointment">Appointment</a>
         </li>
         <li th:classappend="${page == 'Obat'} ? active : ''"class="nav-item" sec:authorize="hasAnyAuthority('Admin', 'Apoteker')">
           <a class="nav-link" href="/user/viewall-obat">Obat</a>
