--- a/RumahSehat/src/main/resources/templates/view-appointment.html
+++ b/RumahSehat/src/main/resources/templates/view-appointment.html
@@ -6,19 +6,85 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
   <title>Beranda</title>
   <object th:include="fragments/fragment :: css" th:remove="tag"></object>
   <object th:include="fragments/fragment :: js" th:remove="tag"></object>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 <nav th:replace="fragments/fragment :: navbar('Appointment')"></nav>
   <div class="d-flex justify-content-center">
-    <div class="m-4">
+    <div class="card">
+      <div class="m-4">
         <h2>Informasi Appointment</h2>
         <br>
-        <div class="col">
-            <a th:href="@{/}" class="btn btn-primary">Beranda</a>
-        </div>
-        <br><br>
-        
+          <div class="mb-2 d-flex">
+            <div class="w-50">
+              <a th:href="@{/}" class="btn btn-primary">Beranda</a>
+            </div>
+            <div class="w-50">
+              <a th:href="@{/user/resep/view}" class="btn btn-primary">Detail Resep</a>
+            </div>
+          </div>
+
+          <div class="w-50">
+            <label class="mb-1" style="color: #3484F0; font-weight: bold;">Kode Appointment</label>
+            <p th:text="${appointment.kode}"></p><br>
+          </div>
+          <div class="mb-2 d-flex">
+            <div class="w-50">
+                <label class="mb-1" style="color: #3484F0; font-weight: bold;">Nama Dokter</label>
+                <p th:text="${appointment.dokter.nama}"></p><br>
+            </div>
+            <div class="w-50">
+                <label class="mb-1" style="color: #3484F0; font-weight: bold;">Nama Pasien</label>
+                <p th:text="${appointment.pasien.nama}"></p><br>
+            </div>
+          </div>
+          <div class="mb-2 d-flex">
+            <div class="w-50">
+                <label class="mb-1" style="color: #3484F0; font-weight: bold;">Waktu Awal</label>
+                <p th:text="${#temporals.format(appointment.waktuAwal, 'dd-MM-yyyy HH:mm')}"></p><br>
+            </div>
+            <div class="w-50">
+                <label class="mb-1" style="color: #3484F0; font-weight: bold;">Status Appointment</label>
+                <p th:if="${appointment.isDone}">Sudah Selesai</p>
+                <p th:unless="${appointment.isDone}">Belum Selesai</p>                                
+            </div>
+          </div>
+
+          <div class="mb-2 d-flex">
+            <div class="w-50">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                  Selesai
+                </button>                               
+            </div>
+            <div class="w-50" sec:authorize="hasAuthority('Dokter')">
+              <a th:href="@{/user/resep/add}" class="btn btn-primary">Create Resep</a>
+            </div>
+          </div>
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  ...
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
     </div>
+    
   </div>
 </body>
 </html>
