--- a/RumahSehat/src/main/resources/templates/view-appointment.html
+++ b/RumahSehat/src/main/resources/templates/view-appointment.html
@@ -53,31 +53,55 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
           <div class="mb-2 d-flex">
             <div class="w-50">
-                <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                <!-- Button trigger modal konfirmasi selesai appointment tanpa resep-->
+                <button th:if="${appointment.listResep.size() == 0}" type="button" class="btn btn-primary" data-toggle="modal" data-target="#tanpaResepConfirm">
                   Selesai
-                </button>                               
+                </button>  
+                <button th:if="${counter > 0}" type="button" class="btn btn-primary" data-toggle="modal" data-target="#cannotSelesai">
+                  Selesai
+                </button>  
+                <a th:if="${counter==0}" class="btn btn-primary" th:href="@{/user/appointment/done/} + ${appointment.kode}">Selesai</a>                            
             </div>
             <div class="w-50" sec:authorize="hasAuthority('Dokter')">
               <a th:href="@{/user/resep/add}" class="btn btn-primary">Create Resep</a>
             </div>
           </div>
-          <!-- Modal -->
-          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <!-- Modal Konfirmasi Selesai Tanpa Resep -->
+          <div class="modal fade" id="tanpaResepConfirm" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                  <h5 class="modal-title" id="exampleModalLabel">Selesaikan Appointment</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
                 </div>
                 <div class="modal-body">
-                  ...
+                  Apakah kamu yakin menyelesaikan appointment tanpa resep ?
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Save changes</button>
+                  <a class="btn btn-primary" th:href="@{/user/appointment/done/} + ${appointment.kode}">Selesai</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Modal Tidak Bisa Selesai appt karena ada resep yg blm selesai -->
+          <div class="modal fade" id="cannotSelesai" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Selesaikan Appointment</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  Maaf, Kamu tidak bisa menyelesaikan appointment karena
+                  ada resep yang belum selesai
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
               </div>
             </div>
