Feat/melihat jadwal appointment

--- a/RumahSehat/src/main/resources/templates/view-appointment-done.html
+++ b/RumahSehat/src/main/resources/templates/view-appointment-done.html
@@ -46,7 +46,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
           </div>
         </div>
         <!-- ngetes tagihannya udh terbuat apa blm -->
-        <!-- <div class="card m-4 p-4">
+        <div class="card m-4 p-4">
           <div class="card-body">
             <h3>Informasi Tagihan</h3>
             <p th:text="${tagihan.kode}"></p>
@@ -57,7 +57,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
             <p th:text="${tagihan.jumlahTagihan}"></p>
             <p th:text="${tagihan.appointment.kode}"></p>
           </div>
-        </div> -->
+        </div>
   </div>
 </body>
 </html>
