--- a/RumahSehat/src/main/resources/templates/view-appointment-resep-undone.html
+++ b/RumahSehat/src/main/resources/templates/view-appointment-resep-undone.html
@@ -20,6 +20,9 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
             <div class="w-50">
               <a th:href="@{/}" class="btn btn-primary">Beranda</a>
             </div>
+            <div class="w-50">
+              <a th:href="@{/user/resep/viewall}" class="btn btn-primary">Detail Resep</a>
+            </div>
           </div>
 
           <div class="w-50">
@@ -50,8 +53,7 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
           <div class="mb-2 d-flex">
             <div class="w-50">
-                <!-- Button trigger modal konfirmasi selesai appointment tanpa resep-->
-                <button th:if="${resep == null}" type="button" class="btn btn-primary" data-toggle="modal" data-target="#tanpaResepConfirm">
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#cannotSelesai">
                   Selesai
                 </button>
             </div>
@@ -59,8 +61,8 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
               <a th:href="@{/user/resep/add/} + ${appointment.kode}" class="btn btn-primary">Create Resep</a>
             </div>
           </div>
-          <!-- Modal Konfirmasi Selesai Tanpa Resep -->
-          <div class="modal fade" id="tanpaResepConfirm" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <!-- Modal Tidak Bisa Selesai appt karena ada resep yg blm selesai -->
+          <div class="modal fade" id="cannotSelesai" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
               <div class="modal-content">
                 <div class="modal-header">
@@ -70,17 +72,17 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
                   </button>
                 </div>
                 <div class="modal-body">
-                  Apakah kamu yakin menyelesaikan appointment tanpa resep ?
+                  Maaf, Kamu tidak bisa menyelesaikan appointment karena resep belum selesai
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <a class="btn btn-primary" th:href="@{/user/appointment/done/} + ${appointment.kode}">Selesai</a>
                 </div>
               </div>
             </div>
           </div>
       </div>
     </div>
+    
   </div>
 </body>
 </html>
