feat(login-logout): login, registrasi pasien, manajemen user

--- a/RumahSehat/src/main/resources/templates/view-appointment-done.html
+++ b/RumahSehat/src/main/resources/templates/view-appointment-done.html
@@ -59,5 +59,6 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
           </div>
         </div>
   </div>
+<footer th:replace="fragments/fragment :: footer"></footer>
 </body>
 </html>
