--- a/RumahSehat/src/main/resources/templates/appointment-done.html
+++ b/RumahSehat/src/main/resources/templates/appointment-done.html
@@ -11,7 +11,7 @@
     <div class="card m-4 p-4">
         <div class="card-body">
             <div class="justify-content-center">
-                <h2 th:text="'Appointment dengan kode ' + ${kode} + ' telah selesai.'"></h2>
+                <h2 th:text="'Appointment dengan kode ' + ${appointment.kode} + ' telah selesai.'"></h2>
                 <br>
                 <a class="btn btn-primary" href="/">Beranda</a>
             </div>
