feat(fitur11): Melihat Detail Resep

--- a/RumahSehat/src/main/resources/templates/fragments/fragment.html
+++ b/RumahSehat/src/main/resources/templates/fragments/fragment.html
@@ -45,7 +45,7 @@
           <a class="nav-link" href="/user/viewall-obat">Obat</a>
         </li>
         <li th:classappend="${page == 'LihatResep'} ? active : ''"class="nav-item" sec:authorize="hasAnyAuthority('Admin', 'Dokter')">
-          <a class="nav-link" href="/user/viewall-resep">Lihat Resep</a>
+          <a class="nav-link" href="/user/resep/viewall">Lihat Resep</a>
         </li>
         <li th:classappend="${page == 'BuatResep'} ? active : ''"class="nav-item" sec:authorize="hasAuthority('Dokter')">
           <a class="nav-link" href="/user/tambah-resep">Buat Resep</a>
