feat(9,10,11): last push

--- a/RumahSehat/src/main/resources/templates/fragments/fragment.html
+++ b/RumahSehat/src/main/resources/templates/fragments/fragment.html
@@ -44,15 +44,12 @@
         <li th:classappend="${page == 'Obat'} ? active : ''"class="nav-item" sec:authorize="hasAnyAuthority('Admin', 'Apoteker')">
           <a class="nav-link" href="/user/viewall-obat">Obat</a>
         </li>
-        <li th:classappend="${page == 'LihatResep'} ? active : ''"class="nav-item" sec:authorize="hasAnyAuthority('Admin', 'Dokter')">
+        <li th:classappend="${page == 'LihatResep'} ? active : ''"class="nav-item" sec:authorize="hasAnyAuthority('Admin', 'Apoteker')">
           <a class="nav-link" href="/user/resep/viewall">Lihat Resep</a>
         </li>
-        <li th:classappend="${page == 'BuatResep'} ? active : ''"class="nav-item" sec:authorize="hasAuthority('Dokter')">
+        <!-- <li th:classappend="${page == 'BuatResep'} ? active : ''"class="nav-item" sec:authorize="hasAuthority('Dokter')">
           <a class="nav-link" href="/user/tambah-resep">Buat Resep</a>
-        </li>
-        <li th:classappend="${page == 'Tagihan'} ? active : ''"class="nav-item" sec:authorize="hasAuthority('Admin')">
-          <a class="nav-link" th:href="@{/chart}">Tagihan</a>
-        </li>
+        </li> -->
       </ul>
 <!--      <form class="form-inline my-2 my-lg-0" th:action="@{/course/view}" method="GET">-->
 <!--        <input class="form-control mr-sm-2" type="search"-->
