--- a/RumahSehat/src/main/resources/templates/form-add-resep.html
+++ b/RumahSehat/src/main/resources/templates/form-add-resep.html
@@ -50,7 +50,7 @@
                     </table>
                     
                     <button class="btn btn-primary" type="submit" name="save">Submit</button>
-                    <a class="btn btn-primary" href="/">Home</a>
+                    <a class="btn btn-primary" href="/">Kembali</a>
                 </form>
             </div>
         </div>
