--- a/RumahSehat/src/main/resources/templates/konfirmasi-resep.html
+++ b/RumahSehat/src/main/resources/templates/konfirmasi-resep.html
@@ -15,11 +15,10 @@
                 <h2 th:text="'Resep dengan id ' + ${idResep} + ' telah diselesaikan.'"></h2>
                 <br>
                 <a class="btn btn-primary" href="/">Home</a>
-                <!-- baliknya ke halaman appointment -->
             </div>
         </div>
     </div>
 </div>
- 
+<footer th:replace="fragments/fragment :: footer"></footer>
 </body>
 </html>
